--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.3",
+    "dayjs": "^1.11.13",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18"
