--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "gen-types": "npx supabase gen types --lang=typescript --project-id frrbygkoxgqpkwhareqp --schema public > src/types/database.types.ts"
+    "gen-types": "npx supabase gen types --lang=typescript --project-id frrbygkoxgqpkwhareqp --schema public > src/types/database.types.ts",
+    "vercel-deploy": "next build && next export"
   },
   "dependencies": {
     "@supabase/ssr": "^0.5.1",
