--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "supabase": "^1.191.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
