--- a/package.json
+++ b/package.json
@@ -15,20 +15,24 @@
     "@supabase/supabase-js": "^2.45.3",
     "@tanstack/react-query": "^5.59.15",
     "@tanstack/react-query-devtools": "^5.59.15",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "dayjs": "^1.11.13",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/chart.js": "^2.9.41",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "chart.js": "^4.4.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
+    "react-chartjs-2": "^5.3.0",
     "supabase": "^1.191.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
