--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build --debug",
     "start": "next start -p 3001",
     "lint": "next lint",
@@ -28,7 +28,7 @@
     "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
-    "next": "14.2.7",
+    "next": "^14.2.32",
     "next-themes": "^0.4.4",
     "react": "^18",
     "react-day-picker": "^8.10.1",
