--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/chart.js": "^2.9.41",
     "@types/node": "^20",
     "@types/react": "^18",
