--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "vercel-deploy": "next build && next export"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-popover": "^1.1.6",
@@ -26,13 +27,16 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "next": "^14.2.32",
-    "next-themes": "^0.4.4",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-hook-form": "^7.64.0",
     "react-responsive": "^10.0.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
