refactor: 이름, 폴더 구조, style

--- a/.prettierrc
+++ b/.prettierrc
@@ -8,7 +8,7 @@
     "<THIRD_PARTY_MODULES>",
     "^@/providers/(.*)",
     "^@/components/(.*)$",
-    "^@/(hooks|api|lib|react-query|types|utils)/(.*)$",
+    "^@/(?!app)(.*)$",
     "^@/app/(.*)$",
     "^[./]"
   ],
