--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env.*
+.env
 
 # vercel
 .vercel
@@ -34,3 +36,12 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
+tests/e2e/.auth.json
