--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "next build --debug",
     "start": "next start -p 3001",
     "lint": "next lint",
-    "vercel-deploy": "next build && next export"
+    "vercel-deploy": "next build && next export",
+    "e2e": "playwright test",
+    "e2e:ui": "playwright test --ui",
+    "e2e:headed": "playwright test --headed"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
